0.48 2022-12-21
        - Added support for NKJP tagset in annotation
          assistant. (diewald)
        - Remove deprecated 'auth_support' (since 0.31)
          configuration parameter - use 'Auth' plugin instead. (diewald)
        - Support environment variable KALAMAR_CLIENT_FILE for
          client information.
        - Support KALAMAR_PLUGINS as a comma-separated environment
          variable to load plugins in addition to the 'plugins'
          parameter in the configuration file. (diewald)
        - Allow popups in plugin widgets. (diewald)
        - Set version via KALAMAR_VERSION environment variable.
          (diewald)
        - Add panel types. (diewald)

0.47 2022-11-22
        - Add command to generate super_client_info file. (diewald)
        - Support 'client_file' parameter as an alternative to 'client_id'
          and 'client_secret'. (diewald)

0.46 2022-08-08
        - Increased max query length from 1000 to 4096 characters. (kupietz)
        - Fix handling of public clients. (diewald)
        - Improve support for non-latin tokens in annotation table views.
          (Fixes #168; diewald)

0.45 2022-05-20
        - Added confidential client support to OAuth. (diewald)
        - Added OAuth client authorization handling. (diewald)
        - Mark public clients as slightly more insecure. (diewald)
        - Reintroduce email handle support. (fixes #165; diewald)
        - Support plugin declarations on registration. (diewald)
        - Fetch client information before grant request. (diewald)
        - Enable Zooming on mobile clients. (diewald)
        - Auth Plugin sets cookie expiration explicitely
          to 3 days. (diewald)
        - Remove JWT Auth flow, which was deprecated since 0.42.
          (diewald)

0.44 2022-02-31
        - Fixed autosecrets migration. (diewald)
        - Format page numbers in pagination. (diewald)
        - Introduce tei2korapxml command via plugin. (diewald)